--- a/lide/dalibor-cerny.html
+++ b/lide/dalibor-cerny.html
@@ -53,26 +53,26 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout-6213fcf4.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-210f827d.js">
+		<link rel="modulepreload" href="../_app/immutable/start-bb711996.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-9ecf994d.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-21cb1274.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-4e7c115a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/bundle-092e65ad.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-b4aa2296.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-27ac26f2.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/_layout.js-79cbea3b.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_layout-c1251061.js">
 		<link rel="modulepreload" href="../_app/immutable/components/pages/lide/_slug_/_page.svelte-7e1f1688.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Link-31d24f85.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/marked.esm-0b02a870.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-616283e8.js">
-		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-3d737c77.js">
+		<link rel="modulepreload" href="../_app/immutable/modules/pages/lide/_slug_/_page.js-2ece0855.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-b40a4f3c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page-688aa294.js"><title>Dalibor Černý | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page-eef468e2.js"><title>Dalibor Černý | Lidé | UTXO.23</title><!-- HEAD_svelte-uikxx2_START --><!-- HEAD_svelte-uikxx2_END -->
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -115,7 +115,7 @@
     <div class="sm:flex gap-10 mt-4"><div>
 
 <div class="w-64 h-64 text-center pb-4 m-auto"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg)"></div>
-        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg)"></div></div></div></div>
+        <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-twitter.jpg)"></div></div></div></div>
 
 
 
@@ -160,14 +160,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="128o2yt">
-			import { start } from "../_app/immutable/start-210f827d.js";
+		<script type="module" data-sveltekit-hydrate="14h57pk">
+			import { start } from "../_app/immutable/start-bb711996.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="128o2yt"]').parentNode,
-				version: "1682882337950",
+				target: document.querySelector('[data-sveltekit-hydrate="14h57pk"]').parentNode,
+				version: "1682886253146",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
